--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<h1>Hi!</h1>
+<head>
+  <!-- Plotly.js -->
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+  <script src="plot.js"></script>
+  <!-- jquery -->
+</head>
+
+<div id="myDiv" style="width:100%;height:500px;"></div>
