--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <!-- Plotly.js -->
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="plot.js"></script>
+  <script src="./plot.js"></script>
   <!-- jquery -->
 </head>
 
